--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "daisyui": "^3.1.1",
     "tailwindcss": "^3.3.2"
+  },
+  "dependencies": {
+    "aos": "^2.3.4"
   }
 }
